<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Answer the following questions"
        android:paddingBottom="16dp"/>
    <TextView
        android:id="@+id/Q1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q1_statement"
        android:paddingTop="16dp"/>
    <LinearLayout
        android:id="@+id/Q1_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/Q1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/Q1_A_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/Q1_checkbox_A" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/Q1_B_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/Q1_checkbox_B" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/Q1_C_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/Q1_checkbox_C" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/Q1_D_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/Q1_checkbox_D" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/Q2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/Q2_statement"
        android:layout_below="@+id/Q1_options"/>
    <EditText
        android:id="@+id/Q2_answer_textfield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@+id/Q2"/>

    <TextView
        android:id="@+id/Q3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/Q3_statement"
        android:layout_below="@+id/Q2_answer_textfield"/>
    <RadioGroup
        android:id="@+id/Q3_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/Q3"
        android:paddingTop="16dp">
        <RadioButton
            android:id="@+id/yes_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yes"/>
        <RadioButton
            android:id="@+id/no_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No"/>
    </RadioGroup>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="Submit"
    android:onClick="submitAnswers"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="reset"
        android:onClick="resetQuiz"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
